src/style.css
:root {
    --side_margin: 8pt;
}

html,
body {
    margin: 0;
    height: 100%;
    font-family: arial;
}

#container {
    height: 100%;
    width: 70%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.graph {
    width: 100%;
    height: 100%;
    font-size: 10pt;
}

.node {
    cursor: pointer;
}

.nodeText {
    cursor: default;
    user-select: none;
    pointer-events: none;
}

.sideBar {
    height: 100%;
    width: 30%;
    position: fixed;
    top: 0;
    right: 0;
    background: #EEE;
    padding: var(--side_margin);
}

.button {
    margin: var(--side_margin);
    background: #DDD;
    font: 12pt arial, sans-serif;
    height: 2em;
    text-align: center;
    line-height: 2em;
    user-select: none;
    cursor: pointer;
}

.button:hover {
    background: #FFF;
}

#videoContainer {}

.videoLecturer {
    font-size: 16pt;
    text-transform: uppercase;
    font-weight: bold;
    margin: var(--side_margin);
}

.videoTitle {
    font-size: 14pt;
    margin: var(--side_margin);
}

.videoSummary {
    font-size: 9pt;
    margin: var(--side_margin);
    text-align: justify;
    line-height: 1.5em;
}

.video-js {
    width: initial !important;
    margin: var(--side_margin) !important;
}

